--- a/style.css
+++ b/style.css
@@ -15,10 +15,13 @@ canvas {
     z-index: -1;   
     opacity: 0.8;
 }
-
+.num {
+  font-size: 8vw;
+}
 .text {
     margin-top: 30vh;
     z-index: 0;
+    font-size: 8vw;
 }
 
 .glow {
